# invertedai

./: .gitignore  .readthedocs.yaml  Colab_Demo.ipynb  Demo_Drive.py  Drive-Demo.ipynb  LICENSE  README.md  demo.ipynb  demo.py  pyproject.toml  requirements.txt
Carla_examples/: Carla-Demo-Script-Birdview.py  Carla-Demo-Script.py  Carla-Demo.ipynb  Carla-Scenario.py  requirements.txt
carla/: Carla-Demo-Script-Birdview.py  Carla-Demo-Script.py  Carla-Demo.ipynb  Dockerfile  README.md  docker-compose.yml  main.py  main_init.py  map_center.json  requirements.txt  run2.py  run3.py  simple.py  utils.py
examples/: CARLA_Town03_Roundabout.osm  Colab-Demo.ipynb  Controlled_intersection.ipynb  Demo_Drive.py  Demo_Drive_REST.py  Drive-Demo.ipynb  README.md  blame_demo_data_generation.ipynb  blame_demo_logs.ipynb  blame_example.ipynb  blame_minimal_example.py  canada:vancouver:victoria_drive_and_marine_drive.csv  cosimulation_minimal_example.py  cosimulation_npc_only.ipynb  cosimulation_npc_only.py  cosimulation_npc_only_colab.ipynb  cosimulation_npc_only_notebook.ipynb  demo.ipynb  interpolation_example.py  large_map_example.py  minimal_example.py  npc_only.ipynb  npc_only.py  npc_only_REST.py  npc_only_colab.ipynb  npc_only_notebook.ipynb  npc_only_with_traffic_lights_REST.py  onp_only_notebook.ipynb  region_drive.py  requirements.txt  response_time.ipynb  safety_scenario_ego_takeover_example.py  scenario_log_example.py  waypoint_example.py
invertedai/: __init__.py  api_resources.py  common.py  cosimulation.py  drive.py  error.py  future.py  mock.py  models.py  requirements.txt  simulation.py  utils.py
invertedai_cpp/: .bazelrc  CMakeLists.txt  Dockerfile  README.md  WORKSPACE  docker-compose.yml  run_all_tests.sh
invertedai_cpp/Docxygen/: Doxyfile-Source.cfg  Doxyfile.cfg
invertedai_cpp/examples/: BUILD  blame_body.json  blame_example.cc  client_example.cc  conditional_initialize_body.json  drive_body.json  drive_body_template.json  drive_tests.cc  fps_control_demo.cc  initialize_body.json  initialize_body_max_speed_car_example.json  initialize_body_waypoint_car_example.json  initialize_body_with_multi_agents_waypoint.json  initialize_sampling_with_types.json  initialize_tests.cc  initialize_with_states_and_attributes.json  large_example.cc  location_info_body.json  log_example.json  logger_example.cc  max_speed_example.cc  ubc_roundabout_ego_agent_log.json  waypoint_example.cc
invertedai_cpp/invertedai/: BUILD  api.cc  api.h  blame_request.cc  blame_request.h  blame_response.cc  blame_response.h  data_utils.cc  data_utils.h  drive_request.cc  drive_request.h  drive_response.cc  drive_response.h  error.cc  error.h  initialize_request.cc  initialize_request.h  initialize_response.cc  initialize_response.h  light_response.h  location_info_request.cc  location_info_request.h  location_info_response.cc  location_info_response.h  logger.cc  logger.h  session.cc  session.h  version.h
invertedai_cpp/large/: BUILD  common.h  large_drive.cc  large_drive.h  large_example.cc  large_helpers.h  large_init_helpers.cc  large_init_helpers.h  large_initialize.cc  large_initialize.h  larger_helpers.cc  main.cc  main.cpp  quadtree.cc  quadtree.h  quatree.cc  test_large_drive.cc  test_large_initialize_draw.cc  visualizer.cc  visualizer.h  visualizer_helpers.h
invertedai_cpp/large/large_drive/: BUILD  large_drive.cc  large_drive.h  quadtree.h
invertedai_cpp/large/large_initialize/: BUILD  large_init_helpers.cc  large_init_helpers.h  large_initialize.cc  large_initialize.h
invertedai_cpp/large/visualizer/: BUILD  visualizer.cc  visualizer.h
invertedai_drive/: __init__.py  drive.py  error.py  models.py  requirements.txt  utils.py
simulators/: README.md  __init__.py  carla_simulator.py  requirements.txt
tests/: conftest.py  recurr_state_test.py  run_tests.sh  test_drive.py  test_initialize.py  test_large_drive.py  (+2 more)
(+217 files in other folders)
