[tool.poetry]
name = "invertedai_drive"
version = "0.1.3.dev1"
description = "Client SDK for InvertedAI Drive"
authors = ["Inverted AI <info@inverted.ai>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "invertedai_drive" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
torch = "^1.11.0"
python-dotenv = "^0.20.0"
numpy = "1.21.2"

[tool.poetry.dev-dependencies]
twine = "==4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
