[tool.poetry]
name = "invertedai"
version = "0.0.6post2"
description = "Client SDK for InvertedAI"
authors = ["Inverted AI <info@inverted.ai>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "invertedai" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.28.1"
pydantic = "^1.10.2"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
numpy = "^1.17.0"
matplotlib = ">=3.6.2"
ipython = "^7.34"
ipywidgets = "^8.0.2"
carla = "^0.9.13"
jupyterlab = "^3.3"
twine = "^4.0.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2.3"
myst-parser = "^0.18.1"
furo = "^2022.9.29"
sphinx-copybutton = "^0.5.0"
sphinx_design = "^0.3.0"
sphinxcontrib-applehelp = "^1.0.2"
sphinxcontrib-devhelp = "^1.0.2"
sphinxcontrib-htmlhelp = "^2.0.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^1.0.3"
sphinxcontrib-serializinghtml = "^1.1.5"
pydata-sphinx-theme = "^0.10.1"
sphinx-autobuild = "^2021.3.14"
nbsphinx = "^0.8.9"
breathe = "^4.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
